# vim: set noexpandtab:

2012-07-27 Steve
	* Moved many of the kinematic functions from SusyDefs into SusyNtTools
		* Should not affect usage within classes inheriting from SusyNtTools or SusyNtAna

2012-07-25 Steve
	* Updated usage of removeSFOSPair function
	* Adding a Tau class, mostly empty so far
	* Correcting MUON_ETCONE30_K1_DATA constant

2012-07-20 Matt
	* Added ET_me to DiLepEvtType
	* Updated method to retrieve DiLepEvtType
	* Updated DilTrigLogic package -- major changes
	       * Call passDilTrig() to see if event and trigger matching pass
	       * Call passDilEvtTrig() to see if event trigger pass
	       * Call passDilTrigMatch() to see if leptons match to the right trigger

2012-07-19 Steve
	* Tagging SusyNtuple-00-00-15

2012-07-18 Anyes
	* Updated SusyDefs with new functions to sel Z
	* Updated SusyNtTools to use cut values in SusyDefs, 
	* added minJetPt to metRel calc
	* added mT2 computation (moved on Susy2LepCutflow code)

2012-07-18 Anyes
	* Updated TriTrigLogic to remove the dependency on SusyNt pointer. Evt now pass in argument.
	* Susy3LepCutflow.cxx updated accordingly

2012-07-17 Steve
	* Updated DataPeriod enum to cover A and B1-B14

2012-07-15 Steve
	* Fixed electron etcone slope definition, it was still at the incorrect value
	* Tagging SusyNtuple-00-00-14

2012-07-14 Steve
	* Added getEventWeight functions to SusyNtTools
	* Added passHotSpot function to SusyNtTools
	* Fixed jets in dumpBaselineObjects

2012-07-13 Steve
	* Rename SusyNtTools method RemoveSFOSPair -> removeSFOSPair
	* Also modified this function to use the isSFOS and Mll functions
	* Rename eEtTopoConeCorr -> elEtTopoConeCorr

2012-07-13 Steve
	* Added global constants LUMI_A_B3 and LUMI_A_B14
	* Updated getEventWeight functions in SusyNtAna for calculating
	  the lumi, pileup, xsec combined weight
		* getEventWeight() gets the default weight for A-B14
			* This function can also take a lumi argument, 
			  but the pileup weights will correspond to A-B14