@@ -108,6 +108,22 @@ void Jet::print() const
 }
 
 /*--------------------------------------------------------------------------------*/
+// Tau print
+/*--------------------------------------------------------------------------------*/
+void Tau::print() const
+{
+  cout.precision(2);
+  cout << fixed << "Tau : q " << setw(2) << q << " Et " << setw(6) << Et() << " eta " << setw(5) << Eta()
+       << " phi " << setw(5) << Phi()
+       << " jetBDT " << jetBDTSigLoose << jetBDTSigMedium << jetBDTSigTight
+       << " eleBDT " << eleBDTLoose << eleBDTMedium << eleBDTTight
+       << " muVeto " << muonVeto
+       << endl;
+  cout.precision(6);
+  cout.unsetf(ios_base::fixed);
+}
+
+/*--------------------------------------------------------------------------------*/
 // Met print
 /*--------------------------------------------------------------------------------*/
 void Met::print() const
