@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2012-07-29 Steve
+	* Added taus to SusyNtObject
+	* Added tau variables, print method, etc.
+
 2012-07-27 Steve
 	* Moved many of the kinematic functions from SusyDefs into SusyNtTools
 		* Should not affect usage within classes inheriting from SusyNtTools or SusyNtAna
